--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -27,16 +27,6 @@
   @apply text-center;
 }
 
-@screen md {
-  .section-heading {
-    @apply text-3xl;
-  }
-  
-}
-@screen sm {
-
-}
-
 .bg-pattern {
   background-color: #f7fafc;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23edf2f7' fill-opacity='0.96'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
@@ -86,4 +76,27 @@ h3 {
   @apply rounded-lg;
   overflow: auto;
   scrollbar-width: none;
+}
+
+/* Reponsive Design */
+@screen md {
+  .section-heading {
+    @apply text-3xl;
+  }
+  .content > h1,
+  h2,
+  h3 {
+    @apply font-semibold;
+  }
+  .content > h1 {
+    @apply text-6xl;
+  }
+  .content > h2 {
+    @apply text-5xl;
+  }
+  .content > h3 {
+    @apply text-4xl;
+  }
+}
+@screen sm {
 }
