--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -171,3 +171,10 @@ h3 {
 }
 @screen sm {
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  #tidio-chat-iframe {
+    inset: auto auto 60px -7px !important;
+  }
+}
