--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -9,12 +9,11 @@ h1,h2,h3,h4{
   @apply font-display;
 }
 .btn {
-  @apply rounded;
+  @apply rounded-lg;
   @apply px-4;
   @apply py-3;
   @apply font-medium;
   @apply leading-tight;
-  @apply shadow-sm;
 }
 
 .section {
