--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,18 +2,26 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-body{
+body {
   @apply font-body;
 }
-h1,h2,h3,h4{
+h1,
+h2,
+h3,
+h4 {
   @apply font-display;
 }
 .btn {
   @apply rounded-lg;
-  @apply px-4;
+  @apply px-8;
   @apply py-3;
-  @apply font-medium;
   @apply leading-tight;
+}
+.btn-primary {
+  @apply bg-primary hover:bg-secondary text-white;
+}
+.btn-secondary {
+  @apply bg-gray-800 hover:bg-gray-900 text-white;
 }
 
 .section {
