--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -27,6 +27,10 @@ h4 {
   @apply bg-gray-800 hover:bg-gray-900 text-white;
 }
 
+.btn-muted{
+
+}
+
 .form-control {
   @apply bg-white rounded-lg border focus:outline-none focus:border-gray-400 text-base px-4 py-2 w-full;
 }
