--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -16,7 +16,7 @@ h4 {
 }
 .btn {
   @apply rounded-lg;
-  @apply px-8;
+  @apply px-5;
   @apply py-3;
   @apply leading-tight;
 }
@@ -27,8 +27,7 @@ h4 {
   @apply bg-gray-800 hover:bg-gray-900 text-white;
 }
 
-.btn-muted{
-
+.btn-muted {
 }
 
 .form-control {
@@ -68,9 +67,10 @@ nav .nuxt-link-active {
   @apply bg-gray-200;
 }
 
-.content a{
+.content a {
   @apply text-primary;
-  box-shadow: inset 0 -0.1666666667em 0 0 #fff, inset 0 -0.3333333333em 0 0 #b0f5ee;
+  box-shadow: inset 0 -0.1666666667em 0 0 #fff,
+    inset 0 -0.3333333333em 0 0 #b0f5ee;
 }
 .content > h1,
 h2,
