--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,117 +1,87 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-body {
-  @apply font-body;
-}
-h1,
-h2,
-h3,
-h4 {
-  @apply font-display;
-}
-.container {
-  @apply lg:max-w-7xl;
-}
-.btn {
-  @apply rounded-lg;
-  @apply px-5;
-  @apply py-3;
-  @apply leading-tight;
-}
-.btn-primary {
-  @apply bg-primary hover:bg-secondary text-white;
-}
-.btn-secondary {
-  @apply bg-gray-800 hover:bg-gray-900 text-white;
-}
+@layer base {
+  body {
+    @apply text-gray-500 dark:text-gray-400 bg-white dark:bg-gray-900;
+  }
 
-.btn-muted {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply text-gray-900 dark:text-gray-200 font-display;
+  }
+  h1 {
+    @apply text-2xl sm:text-3xl font-bold tracking-tight;
+  }
+  h2 {
+    @apply text-xl sm:text-2xl font-bold tracking-tight;
+  }
+  h3 {
+    @apply text-lg sm:text-xl font-bold tracking-tight;
+  }
+  .container {
+    @apply lg:max-w-7xl;
+  }
+  .section {
+    @apply py-20;
+    @apply px-6;
+  }
+  .section-heading {
+    @apply text-center;
+    @apply leading-tight;
+  }
+  .section-description {
+    @apply text-center;
+  }
+  .btn {
+    @apply rounded-lg;
+    @apply px-5;
+    @apply py-3;
+    @apply leading-tight;
+  }
+  .btn-primary {
+    @apply bg-primary-500 hover:bg-primary-600  text-primary-50;
+  }
+  .btn-secondary {
+    @apply bg-gray-100 hover:bg-gray-200 dark:bg-gray-700 dark:hover:bg-gray-800 text-gray-400;
+  }
+  .form-control {
+    @apply bg-gray-100 dark:bg-gray-800 rounded-lg border dark:border-gray-700 focus:outline-none focus:border-gray-400 text-base px-4 py-2 w-full;
+  }
+  .content a {
+    @apply text-primary-500;
+    box-shadow: inset 0 -0.1666666667em 0 0 #7dd3fc,
+      inset 0 -0.3333333333em 0 0 #38bdf8;
+  }
+  .entry-sticky-shares {
+    @apply border dark:border-gray-600/20 rounded-lg backdrop-blur bg-white/75 dark:bg-gray-900/75;
+  }
+  .logo-path {
+    @apply fill-[#0f172a] dark:fill-[#f8fafc];
+  }
+  .logo-circle {
+    @apply fill-[#0ea5e9];
+  }
 }
-
-.form-control {
-  @apply bg-white rounded-lg border focus:outline-none focus:border-gray-400 text-base px-4 py-2 w-full;
-}
-
-.section {
-  @apply py-20;
-  @apply px-6;
-}
-
-.section-heading {
-  @apply text-2xl;
-  @apply text-center;
-  @apply leading-tight;
-}
-
-.section-description {
-  @apply text-center;
-}
-
-.bg-pattern {
-  background-color: #f7fafc;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23edf2f7' fill-opacity='0.96'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-}
-
-.page-enter-active,
-.page-leave-active {
-  transition: opacity 0.5s;
-}
-.page-enter,
-.page-leave-active {
-  opacity: 0;
-}
-
-nav .nuxt-link-active {
-  @apply bg-gray-200;
-}
-
-.content a {
-  @apply text-primary;
-  box-shadow: inset 0 -0.1666666667em 0 0 #fff,
-    inset 0 -0.3333333333em 0 0 #b0f5ee;
-}
-.content > h1,
-h2,
-h3 {
-  @apply text-gray-900;
-  @apply mt-3;
-  @apply mb-1;
-  @apply leading-tight;
-}
-
-.content > h1 {
-  @apply text-3xl;
-}
-.content > h2 {
-  @apply text-2xl;
-}
-.content > h3 {
-  @apply text-xl;
-}
-
 .content > :first-child {
   margin-top: 0;
 }
-.content p {
+.content p,
+.content h3,
+.content h4,
+.content h5,
+.content h6 {
   margin-bottom: 1.25em;
   margin-top: 1.25em;
 }
-
-.content > pre {
-  @apply rounded-2xl;
-  overflow: auto;
-  scrollbar-width: none;
-}
-
-/* Social Share Button */
 .entry-sticky-shares {
   position: relative;
   z-index: 1;
-  background-color: rgb(255, 255, 255);
-  border: 1px solid #e2e8f0;
-  border-radius: 5px;
   padding: 15px;
   text-align: center;
   top: 0;
@@ -165,19 +135,6 @@ h3 {
 }
 
 @screen md {
-  .section-heading {
-    @apply text-3xl;
-  }
-  .content > h1 {
-    @apply text-6xl;
-  }
-  .content > h2 {
-    @apply text-5xl;
-  }
-  .content > h3 {
-    @apply text-4xl;
-  }
-
   /* Social Share Button */
   .entry-sticky-shares {
     position: fixed;
@@ -192,16 +149,5 @@ h3 {
   }
   .entry-sticky-shares ul li.share-sum {
     margin-bottom: 10px;
-  }
-}
-@screen 2xl {
-  .entry-sticky-shares {
-    left: 20%;
-  }
-}
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  #tidio-chat-iframe {
-    inset: auto auto 60px -7px !important;
   }
 }
