--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -24,6 +24,9 @@
   h3 {
     @apply text-lg sm:text-xl font-bold tracking-tight;
   }
+  nav .nuxt-link-active {
+    @apply text-primary-500;
+  }
   .container {
     @apply md:max-w-6xl lg:max-w-7xl;
   }
