--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -44,16 +44,11 @@
     @apply py-3;
     @apply leading-tight;
   }
-  .btn-primary {
-    @apply bg-primary-500 hover:bg-primary-600 border border-primary-400  text-primary-50;
-  }
-  .btn-secondary {
-    @apply bg-gray-100 hover:bg-gray-200 border dark:border-gray-600 dark:bg-gray-700 dark:hover:bg-gray-800 text-gray-400;
-  }
+
   .form-control {
     @apply bg-gray-100 dark:bg-gray-800 rounded-lg border dark:border-gray-700 focus:outline-none focus:border-gray-400 text-base px-4 py-2 w-full;
   }
-  .content a {
+  .content a:not(.btn) {
     @apply text-primary-500;
     box-shadow: inset 0 -0.1666666667em 0 0 #7dd3fc,
       inset 0 -0.3333333333em 0 0 #38bdf8;
@@ -137,6 +132,19 @@ nav .nuxt-link-active {
 }
 .entry-sticky-shares .icon-linkedin {
   fill: #0077b5;
+}
+
+.btn-primary {
+  @apply bg-primary-500 hover:bg-primary-600 border border-primary-400  text-primary-50;
+}
+.btn-success {
+  @apply bg-green-500 hover:bg-green-600 border border-green-400  text-green-50;
+}
+.btn-danger {
+  @apply bg-red-500 hover:bg-red-600 border border-red-400  text-red-50;
+}
+.btn-secondary {
+  @apply bg-gray-100 hover:bg-gray-200 border dark:border-gray-600 dark:bg-gray-700 dark:hover:bg-gray-800 text-gray-400;
 }
 
 /* Reponsive Design */
