feat: Prism Copy to clipboard option added

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -236,3 +236,23 @@ nav .nuxt-link-active:not(.btn) {
     margin-bottom: 10px;
   }
 }
+
+
+div.code-toolbar > .toolbar {
+  right: 0.5em !important;
+  opacity: 100 !important;
+}
+
+/* :not(pre) > code[class*='language-'], pre[class*='language-'] {
+  @apply bg-gray-800;
+} */
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
+  background: #1e293b !important;
+  @apply rounded-xl;
+}
+.copy-to-clipboard-button{
+  @apply uppercase py-1 px-3 rounded-md bg-gray-700 hover:bg-gray-600 text-xs tracking-wide text-gray-50 !important;
+  font-size: 0.65rem  !important;
+  letter-spacing:  0.1em !important;
+}
