--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,6 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Global Classes  */
+.container {
+  @apply mx-auto px-2 sm:px-6 lg:px-8  sm:max-w-7xl;
+}
+.section {
+  @apply py-12;
+  @apply px-6;
+}
+.section-heading {
+  @apply text-center;
+  @apply leading-tight;
+}
+.section-description {
+  @apply text-center;
+}
+
+
 /*  Page Global Transitions  */
 .page-enter-active,
 .page-leave-active {
@@ -14,37 +31,36 @@
 
 
 
-@layer base {
-  body {
-    @apply text-gray-600 dark:text-gray-300 bg-white dark:bg-gray-900;
-  }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply text-gray-900 dark:text-gray-200 font-display;
-  }
-  h1 {
-    @apply text-2xl sm:text-3xl font-bold tracking-tight;
-  }
-  h2 {
-    @apply text-xl sm:text-2xl font-bold tracking-tight;
-  }
-  h3 {
-    @apply text-lg sm:text-xl font-bold tracking-tight;
-  }
+body {
+  @apply text-gray-600 dark:text-gray-300 bg-white dark:bg-gray-900;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply text-gray-900 dark:text-gray-200 font-display;
+}
+h1 {
+  @apply text-2xl sm:text-3xl font-bold tracking-tight;
+}
+h2 {
+  @apply text-xl sm:text-2xl font-bold tracking-tight;
+}
+h3 {
+  @apply text-lg sm:text-xl font-bold tracking-tight;
+}
 
 /* -----------------------
    Header
 ----------------------- */
 .header-wrapper {
-  @apply fixed bottom-0 sm:bottom-auto w-full z-50 transition-all duration-300 border-t md:border-t-0 md:border-b md:py-2 dark:border-gray-700/75 bg-white/75 dark:bg-gray-900/75 backdrop-blur ;
+  @apply fixed bottom-0 sm:bottom-auto w-full z-50 transition-all duration-300 border-t md:border-t-0 md:border-b md:py-2 dark:border-gray-700/75 bg-white/50 dark:bg-gray-900/50 backdrop-blur-lg;
 }
-.header{
-    @apply flex sm:justify-between sm:items-center container mx-auto flex-col-reverse sm:flex-row
+.header {
+  @apply flex sm:justify-between sm:items-center sm:px-4 container mx-auto flex-col-reverse sm:flex-row;
 }
 .header-content{
     @apply flex items-center justify-between px-4 py-3 sm:p-0;
@@ -52,61 +68,48 @@
 /* -----------------------
   Navigation
 ----------------------- */
-.navbar{
-  @apply  px-2 transform sm:flex sm:bg-transparent transition-all duration-100 ease-linear pt-5 sm:pt-0;
+
+nav.navbar {
+  @apply px-2 transform sm:flex sm:bg-transparent transition-all duration-100 ease-linear;
 }
-.navbar-toggle{
-   @apply block dark:text-gray-100 focus:text-primary-500 focus:outline-none focus:bg-gray-100 dark:focus:bg-gray-800 p-2 rounded-md transition-all duration-300
+button.nav-toggle {
+  @apply block dark:text-gray-100 focus:text-primary-500 focus:outline-none focus:bg-gray-100 dark:focus:bg-gray-800 p-2 rounded-md transition-all duration-300;
 }
-.navbar-link{
-    @apply py-[2px] px-4 rounded-lg sm:mt-0 sm:ml-2 w-full sm:w-auto inline-flex sm:flex-row items-center flex-row-reverse hover:bg-gray-100 dark:hover:bg-gray-800 transition-all duration-300;
+.nav-item {
+  @apply p-2 rounded-lg hover:text-primary-400 sm:mt-0 sm:ml-2 w-full sm:w-auto inline-flex sm:flex-row items-center flex-row-reverse;
 }
 
-.container {
-    @apply mx-auto px-2 sm:px-6 lg:px-8  sm:max-w-7xl;
-}
-.section {
-    @apply py-12;
-    @apply px-6;
-}
-.section-heading {
-    @apply text-center;
-    @apply leading-tight;
-}
-.section-description {
-    @apply text-center;
-}
 .btn {
-    @apply rounded-lg;
-    @apply px-5;
-    @apply py-3;
-    @apply leading-tight;
-    @apply transition-all duration-300
+  @apply rounded-lg;
+  @apply px-5;
+  @apply py-3;
+  @apply leading-tight;
+  @apply transition-all duration-300
 }
 
-  .form-control {
-    @apply bg-gray-100 dark:bg-gray-800 rounded-lg border dark:border-gray-700 focus:outline-none focus:border-gray-400 text-base px-4 py-2 w-full;
-  }
-  .content a:not(.btn) {
-    @apply text-primary-500;
-    box-shadow: inset 0 -0.1666666667em 0 0 #7dd3fc,
-      inset 0 -0.3333333333em 0 0 #38bdf8;
-  }
-  .content > pre {
-    @apply rounded-2xl;
-    overflow: auto;
-    scrollbar-width: none;
-  }
-  .entry-sticky-shares {
-    @apply border dark:border-gray-600/75 rounded-lg backdrop-blur bg-white/75 dark:bg-gray-900/75;
-  }
-  .logo-path {
-    @apply fill-[#0f172a] dark:fill-[#f8fafc];
-  }
-  .logo-circle {
-    @apply fill-[#0ea5e9];
-  }
+.form-control {
+  @apply bg-gray-100 dark:bg-gray-800 rounded-lg border dark:border-gray-700 focus:outline-none focus:border-gray-400 text-base px-4 py-2 w-full;
 }
+.content a:not(.btn) {
+  @apply text-primary-500;
+  box-shadow: inset 0 -0.1666666667em 0 0 #7dd3fc,
+    inset 0 -0.3333333333em 0 0 #38bdf8;
+}
+.content > pre {
+  @apply rounded-2xl;
+  overflow: auto;
+  scrollbar-width: none;
+}
+.entry-sticky-shares {
+  @apply border dark:border-gray-600/75 rounded-lg backdrop-blur bg-white/75 dark:bg-gray-900/75;
+}
+.logo-path {
+  @apply fill-[#0f172a] dark:fill-[#f8fafc];
+}
+.logo-circle {
+  @apply fill-[#0ea5e9];
+}
+
 nav .nuxt-link-active:not(.btn) {
   @apply text-primary-500;
 }
